<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding"
    tools:context=".activities.EditPasswordActivity">

    <LinearLayout
        android:id="@+id/linearLayoutBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageViewBack"
            android:layout_width="@dimen/back_arrow_width"
            android:layout_height="@dimen/back_arrow_height"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_back_arrow"
            app:tint="@color/darkGray" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personalData"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="@dimen/bold_font"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/page_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:padding="@dimen/padding"
        android:text="@string/enter_a_new_password"
        android:textAlignment="center"
        android:textColor="#0F2851"
        android:textSize="@dimen/large_title_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutBack" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:paddingTop="@dimen/padding"
        android:text="@string/old_password"
        android:textSize="@dimen/normal_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/page_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:hint="@string/enter_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/outline_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:minHeight="@dimen/login_min_height" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:paddingTop="@dimen/padding"
        android:text="@string/new_password"
        android:textSize="@dimen/normal_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_password_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:hint="@string/enter_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name2"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/outline_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_password_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:minHeight="@dimen/login_min_height" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/error_8_char"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_layout"
        android:layout_alignParentStart="true"
        android:drawableLeft="@drawable/ic_alert_icon"
        android:drawablePadding="5dp"
        android:drawableTint="@color/colorPrimaryDark"
        android:paddingTop="@dimen/padding"
        android:text="@string/create_acc_error_8_char"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/normal_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_password_layout" />

    <TextView
        android:id="@+id/error_upper_lower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/error_8_char"
        android:layout_alignParentStart="true"
        android:drawableLeft="@drawable/ic_alert_icon"
        android:drawablePadding="5dp"
        android:drawableTint="@color/colorPrimaryDark"
        android:paddingTop="@dimen/padding"
        android:text="@string/create_acc_error_both_upper_lower"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/normal_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/error_8_char" />

    <TextView
        android:id="@+id/error_num_symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/error_upper_lower"
        android:layout_alignParentStart="true"
        android:drawableLeft="@drawable/ic_alert_icon"
        android:drawablePadding="5dp"
        android:drawableTint="@color/colorPrimaryDark"
        android:paddingTop="@dimen/padding"
        android:text="@string/create_acc_error_one_symbol"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/normal_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/error_upper_lower" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_margin"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/padding"
        android:clickable="false"
        android:drawableRight="@drawable/ic_arrow_right"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/confirm_changes"
        android:textSize="@dimen/normal_text"
        app:cornerRadius="@dimen/corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/error_num_symbol" />

</androidx.constraintlayout.widget.ConstraintLayout>