<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding"
    tools:context=".activities.EditNameActivity">

    <LinearLayout
        android:id="@+id/linearLayoutBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageViewBack"
            android:layout_width="@dimen/back_arrow_width"
            android:layout_height="@dimen/back_arrow_height"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_back_arrow"
            app:tint="@color/darkGray" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personalData"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="@dimen/bold_font"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/page_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:padding="@dimen/padding"
        android:text="@string/edit_your_full_name"
        android:textAlignment="center"
        android:textColor="#0F2851"
        android:textSize="@dimen/large_title_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutBack" />


    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:paddingTop="@dimen/padding"
        android:text="@string/full_name"
        android:textSize="@dimen/normal_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/page_title" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_margin"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/padding"
        android:clickable="false"
        android:drawableRight="@drawable/ic_arrow_right"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/confirm_changes"
        android:textSize="@dimen/normal_text"
        app:cornerRadius="@dimen/corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_input" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/name_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:minHeight="@dimen/login_min_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

</androidx.constraintlayout.widget.ConstraintLayout>